--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         <div class="projects">
             <div class="project-card">
-                <div class="project-title">Car Rental</div>
+                <div class="project-title">FinWise</div>
                 <div class="project-description">
                     A responsive, animated finance dashboard built with HTML, CSS, and JavaScript. Allows users to track income/expenses, set savings goals, view charts, switch themes (dark mode), and export data in PDF/CSV. Integrated smart suggestions and real-time balance updates in ₹.
                 </div>
@@ -203,7 +203,7 @@
                     <div class="tag">Mongo DB</div>
                 </div>
                 <div class="link-icon">
-                    <a href="https://github.com/Rutvik-Kakadiya-rk/myfolio" target="_blank">↗</a>
+                    <a href="https://github.com/Rutvik-Kakadiya-rk/realestate" target="_blank">↗</a>
                 </div>
             </div>
 
